--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 </div>
 
                 <div class="search-bar">
-                    <input type="text" name="" value="" placeholder="Cerca un film, serie tv .....">
-                    <button id="btn-search" type="button" name="button"> CERCA </button>
+                    <input type="text" name="" value="" placeholder="Cerca un film, serie tv ....." v-model="filterSearch" @keyUp.enter="btnResearch">
+                    <button id="btn-search" type="button" name="button" @click="btnResearch"> CERCA </button>
                 </div>
 
             </header>
 
             <section class="container-box">
-                <div class="box">
-                    <img src="https://i.pinimg.com/originals/da/db/ac/dadbac7b99037c36d6ff5b50647e7e91.jpg" alt="">
-                    <h2>titolo 1</h2>
-                    <h3>titolo 2</h3>
-                    <p>lingua</p>
-                    <p>voto</p>
+                <div class="box" v-for="movie in movies">
+                    <img src="https://www.softwareone.it/public/layout/uploads/2019/05/movavi-video-editor-icona.png" alt="">
+                    <h2> {{ movie.title }}</h2>
+                    <h3> {{ movie.original_title }}</h3>
+                    <p> {{ movie.original_language}}</p>
+                    <p> {{ movie.vote_average }}</p>
 
 
                 </div>
