Start add style

--- a/index.html
+++ b/index.html
@@ -49,40 +49,55 @@
 
             <section class="container-box">
 
-                <div class="box" v-for="movie in arrayMoviesSeries">
+                <div class="card" v-for="movie in arrayMoviesSeries">
                     <!-- copertina del FILM o SERIE TV -->
-                    <ul>
-                        <li v-if="movie.poster_path != 'null'">
-                            <img :src="urlPoster + 'w185' + movie.poster_path " :alt="urlNullPoster">
-                        </li>
-                        <li v-else>
-                            <img src="https://www.softwareone.it/public/layout/uploads/2019/05/movavi-video-editor-icona.png" alt="">
-                        </li>
-                    </ul>
+                    <div class="box">
+                        <div class="imgBx">
+                            <ul>
+                                <li v-if="movie.poster_path != null">
+                                    <img :src="urlPoster + 'w185' + movie.poster_path " alt="https://www.softwareone.it/public/layout/uploads/2019/05/movavi-video-editor-icona.png">
+                                </li>
+                                <li v-else>
+                                    <img src="https://www.softwareone.it/public/layout/uploads/2019/05/movavi-video-editor-icona.png" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="contentBx">
+                            <div class="titleBx">
+                                <h2>
+                                    Titolo: {{ movie.title ? movie.title : movie.name }}
+                                </h2>
+                                <h3>
+                                    Titolo originale: {{ movie.original_title ? movie.original_title : movie.original_name }}
+                                </h3>
 
+                                <ul>
+                                    <li v-if="languageFlag.includes(movie.original_language)">
+                                        <img id="flags" :src="'flag/' + movie.original_language + '.png' " :alt="movie.original_language">
+                                    </li>
+                                    <li v-else>
+                                        {{ movie.original_language }}
+                                    </li>
+                                    <li id="icon-star">
+                                        <!-- stampo le star piene in base al voto -->
+                                        <i v-for="i in votation(movie.vote_average)" class="fas fa-star"></i>
+                                        <!-- stampo le star vuote sottraendole al voto -->
+                                        <i v-for="i in 5 - (votation(movie.vote_average))" class="far fa-star"></i>
+                                    </li>
+                                    <li v-if="(votation(movie.vote_average)) != 0">
+                                        voto : {{ (votation(movie.vote_average)) }}
+                                    </li>
+                                    <li v-else>
+                                        voto : n.a.
+                                    </li>
+                                    <li>
+                                        Trama: {{ movie.overview.slice(0,150) }} ...
+                                    </li>
+                                </ul>
+                            </div>
 
-                    <h2> {{ movie.title ? movie.title : movie.name }}</h2>
-                    <h3> {{ movie.original_title ? movie.original_title : movie.original_name }}</h3>
-
-                    <ul>
-                        <li v-if="languageFlag.includes(movie.original_language)">
-                            <img id="flags" :src="'flag/' + movie.original_language + '.png' " :alt="movie.original_language">
-                        </li>
-                        <li v-else>
-                            {{ movie.original_language }}
-                        </li>
-                        <li id="icon-star">
-                            <!-- stampo le star piene in base al voto -->
-                            <i v-for="i in votation(movie.vote_average)" class="fas fa-star"></i>
-                            <!-- stampo le star vuote sottraendole al voto -->
-                            <i v-for="i in 5 - (votation(movie.vote_average))" class="far fa-star"></i>
-                        </li>
-                        <li>
-                            {{ (votation(movie.vote_average)) }}
-                        </li>
-                    </ul>
-
-
+                        </div>
+                    </div>
                 </div>
             </section>
 
