Add home page with movie/top_rated and click on logo Boolflix
With click on logo return to Home Page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <header>
                 <div class="logo-header">
-                    <img src="https://www.ailequal.com/ajax-ex-boolflix/img/boolflix.png" alt="">
+                    <img src="https://www.ailequal.com/ajax-ex-boolflix/img/boolflix.png" alt="" @click="returnHomePage">
                 </div>
 
                 <div class="search-container">
